--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -149,6 +149,13 @@
         <item name="android:textSize">@dimen/small_copy_mid</item>
     </style>
     
+     <style name="sub_copy_android_medium">
+        <item name="android:textColor">@color/sub_copy</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:typeface">normal</item>
+    </style>
+    
+    
     <!--  Field Copy Styles-->
     <style name="field_copy_small">
         <item name="android:textColor">@color/field_copy</item>
