--- a/Discover-Bank-Phone/res/layout/two_item_list_element.xml
+++ b/Discover-Bank-Phone/res/layout/two_item_list_element.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/home_list_item_no_stroke">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/divider_line"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/list_item"
-        android:background="@drawable/table_dotted_line"/>
+        android:layout_height="1dp"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/common_table_list_item_gray"/>
     
     <RelativeLayout
         android:id="@+id/list_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/forms_inner_padding"
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
-        android:paddingBottom="@dimen/forms_inner_padding">
+        android:layout_below="@+id/divider_line"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp" >
 
         <TextView
             android:id="@+id/left_text"
             style="@style/field_copy_small"
-            android:layout_width="85dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:text="@string/edit" 
-            android:layout_marginBottom="@dimen/forms_inner_padding"/>
+            android:layout_marginBottom="2dp"
+            android:text="@string/edit" />
+
+        <TextView
+            android:id="@+id/address_text"
+            style="@style/sub_copy_android_medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/left_text"
+            android:text="@string/edit" />
 
         <TextView
             android:id="@+id/right_text"
@@ -37,21 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingBottom="@dimen/content_padding"
             android:paddingLeft="@dimen/content_padding"
-            android:text="@string/edit" />
+            android:text="@string/edit"
+            android:textStyle="normal" />
 
-        <TextView
-            android:id="@+id/address_text"
-            style="@style/smallest_copy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignTop="@+id/left_text"
-            android:layout_toRightOf="@+id/left_text"
-            android:paddingBottom="@dimen/content_padding"
-            android:layout_marginLeft="@dimen/between_related_elements_padding"
-            android:text="@string/edit" />
     </RelativeLayout>
 
 </RelativeLayout>
