--- a/Discover-Bank-Phone/res/values/strings_help.xml
+++ b/Discover-Bank-Phone/res/values/strings_help.xml
@@ -7,9 +7,9 @@
     <string name="open_an_account">Open an Account</string>
     <string name="bank_general_mail_title">General</string>
     <string name="bank_outside_usa">Outside U.S.</string>
-    <string name="bank_new_accounts_mail_title">New\nAccounts/\nDeposits</string>
-    <string name="payment_address">Payment\nAddress</string>
-    <string name="customer_service_two_line">Customer\nService</string>
+    <string name="bank_new_accounts_mail_title">New Accounts/Deposits</string>
+    <string name="payment_address">Payment Address</string>
+    <string name="customer_service_two_line">Customer Service</string>
     <string name="bank_personal_loans">Personal Loans</string>
     <string name="by_phone">By Phone</string>
     <string name="by_mail">By Mail</string>
@@ -32,7 +32,7 @@
     <string name="bank_general_mail">Discover Bank\nP.O. Box 30416\nSalt Lake City, UT\n84130</string>
     <string name="bank_new_accounts_mail">Discover Bank\nP.O. Box 30417\nSalt Lake City, UT\n84130</string>
     <string name="bank_personal_loans_mail">Discover Personal Loans\nP.O. Box 30954\nSalt Lake City, UT\n84130&#8211;0954</string>
-    <string name="bank_personal_loans_mail_title">Personal\nLoans</string>
+    <string name="bank_personal_loans_mail_title">Personal Loans</string>
    
     <string name="contact_us">Contact Us</string>
 
