--- a/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/forms_inner_padding"
+    android:paddingLeft="@dimen/forms_inner_padding"
+    android:paddingRight="@dimen/forms_inner_padding"
     android:orientation="vertical" >
 
     <View
@@ -33,23 +34,22 @@
 
         <TextView
             android:id="@+id/middle_label"
-            style="@style/body_copy_title_max"
-            android:layout_width="wrap_content"
+            style="@style/title_unbold"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/top_label"
             android:layout_below="@+id/top_label"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
-            
+            android:layout_alignLeft="@+id/top_label"
             android:singleLine="true"
+            android:background="@drawable/common_edit_text_grey_line"
             android:text="@string/edit" />
 
         <com.discover.mobile.bank.payees.PayeeValidatedEditField
             android:id="@+id/editable_field"
+            style="@style/title_unbold"
             android:layout_width="match_parent"
             android:layout_height="@dimen/input_field_height"
-            android:layout_alignLeft="@+id/top_label"
-            android:layout_below="@+id/middle_label"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:layout_alignLeft="@+id/middle_label"
+            android:layout_alignBottom="@+id/middle_label"
             android:imeOptions="flagNoExtractUi|actionDone"
             android:inputType="textNoSuggestions"
             android:singleLine="true"
