--- a/Discover-Card-Phone/res/layout/fastcheck_display_title_list_item.xml
+++ b/Discover-Card-Phone/res/layout/fastcheck_display_title_list_item.xml
@@ -18,19 +18,22 @@
     <TextView
         android:id="@+id/balance_label"
         style="@style/field_copy_fastcheck_timestamp"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_toLeftOf="@+id/refresh_button"
+        android:layout_marginRight="10dp"
+        android:layout_toRightOf="@id/fastcheck_display_back_button"
         android:gravity="right"/>
-     
+       
+        
+
     <ImageButton
-        android:id="@id/refresh_button"
-        android:layout_width="30dp"
+        android:id="@+id/refresh_button"
+        android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/refresh_btn"  
-       	android:background="#00000000" 
-       	android:layout_alignParentRight="true"/>
+        android:layout_toRightOf="@id/balance_label"
+       	android:src="@drawable/refresh_btn"  
+       	android:background="#00000000" />
 
     <TextView
         android:id="@+id/balance_value"
