--- a/Discover-Card-Phone/res/values/strings_passcode.xml
+++ b/Discover-Card-Phone/res/values/strings_passcode.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name">Passcode</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="reenter_pass">Re-enter your passcode.</string>
