US9063 - Added the Duration Type field to the transfer confirmation page
Test Cases:
- Ensured all 4 cases of duration appeared appropriately in both landscape and portrait.
- Validated the duration value was being substituted appropriately for temporary values.

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -49,6 +49,13 @@
         <item>continue_until_a_set_dollar_amount_has_been_transferred</item>
     </string-array>
     
+    <string-array name="duration_type_confirmation_strings">
+        <item>Continue until cancelled</item>
+    	<item>Continue until %s</item>
+    	<item>Continue until %s transactions</item>
+    	<item>Continue until %s</item>    
+	</string-array>
+    
     <string name="external_accounts">External Accounts</string>
     <string name="internal_accounts">Internal Accounts</string>
     
