US9795 Android: Tap "GO" on login field.  Added ime option to allow logging in without hiding the keyboard.

--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -140,7 +140,8 @@
                         android:hint="@string/empty"
                         android:inputType="textPassword"
                         android:maxLength="32"
-                        android:textCursorDrawable="@null" />
+                        android:textCursorDrawable="@null"
+                        android:imeOptions="actionGo" />
 					
 					<!-- toggle switch label and compound button -->
 					<RelativeLayout
