--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -48,4 +48,10 @@
     
     <!-- Action Button Minimum Width -->
     <dimen name="action_button_min_width">150dp</dimen>
+    
+    <!-- Gray Page Indicator Image Height -->
+    <dimen name="bank_gray_circle_size">7dp</dimen>
+    <dimen name="bank_gray_circle_margin">5dp</dimen>
+    <dimen name="bank_whats_new_action_bar_height">60dp</dimen>
+	<dimen name="bank_whats_new_footer_height">40dp</dimen>
 </resources>
