--- a/Discover-Bank-Phone/res/layout/bank_whats_new_content_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_whats_new_content_view.xml
@@ -16,20 +16,21 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="@dimen/forms_inner_padding"
+            android:layout_marginLeft="@dimen/groups_of_elements_padding"
             android:layout_toLeftOf="@+id/close"
             android:gravity="center_vertical"
             android:text="@string/bank_whats_new_action_bar_title" />
 
         <ImageButton
             android:id="@+id/close"
-            android:layout_width="30dp"
+            android:layout_width="@dimen/min_touch_region"
             android:layout_height="fill_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/bank_whats_new_action_button_selector"
             android:contentDescription="@string/empty"
             android:padding="@dimen/groups_of_elements_padding"
+            android:layout_marginRight="@dimen/groups_of_elements_padding"
             android:src="@drawable/x_gray" />
     </RelativeLayout>
 
