--- a/Discover-Bank-Phone/res/layout/bank_table_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_table_item.xml
@@ -39,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/date"
                 android:layout_marginLeft="18dp"
+                android:contentDescription="@null"
                 android:layout_marginTop="1dp"
                 android:background="@drawable/recurring_icon"
                 android:clickable="false"
@@ -50,8 +51,9 @@
             style="@style/blue_table_text"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="1.4"
+            android:layout_weight="2"
             android:clickable="false"
+            android:text="From: Cashback C..."
             android:paddingRight="@dimen/between_related_elements_padding" />
 
         <TextView
@@ -59,7 +61,7 @@
             style="@style/table_text"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="1.6"
+            android:layout_weight="1"
             android:clickable="false"
             android:gravity="right"
             android:lines="1" />
