--- a/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
@@ -197,7 +197,8 @@
             android:gravity="center_vertical"
             android:layout_weight="2.25"
             android:text="@string/transfer_transactions"
-            android:textColor="@color/field_copy" />
+            android:textColor="@color/field_copy"
+             />
 
         <com.discover.mobile.common.ui.widgets.PositiveIntegerEditText
             android:id="@+id/transaction_amount"
@@ -207,7 +208,9 @@
             android:layout_weight="2.25"
             android:gravity="center_vertical"
             android:imeOptions="actionDone"
-            android:textCursorDrawable="@null" />
+            android:textCursorDrawable="@null" 
+            android:clickable="false"
+            android:enabled="false"/>
     </LinearLayout>
 
     <TextView
@@ -283,7 +286,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.25"
-            android:imeOptions="actionDone" />
+            android:imeOptions="actionDone"
+            android:clickable="false"
+            android:enabled="false"
+            />
     </LinearLayout>
 
     <TextView
