--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -55,9 +55,11 @@
     <string name="logout_sucess">
         You\'ve been logged out. Thank you for using Discover Mobile.
     </string>
-    <string name="session_expired">
+    <string name="session_expired_body">
         We\'ve logged you out to protect your account security.  Please log in again.
     </string>
+    <string name="session_expired_header">Secure Logout</string>
+    <string name="session_expired_button">Ok</string>
 <!--  LOGIN ERRORS -->
 	<string name="id_invalid">
 	    Please check your ID and try again.
