--- a/Discover-Commons/res/drawable/common_edit_text_grey_line.xml
+++ b/Discover-Commons/res/drawable/common_edit_text_grey_line.xml
@@ -5,7 +5,8 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_enabled="true" android:drawable="@drawable/common_textfield_default_grey" />
+    <item android:state_enabled="true" android:state_focused="true" android:drawable="@drawable/common_textfield_selected_grey" />
+    <item android:state_enabled="true" android:state_focused="false" android:drawable="@drawable/common_textfield_default_grey" />
     <item android:state_enabled="false" android:drawable="@drawable/common_textfield_disabled_grey" />
     <item android:drawable="@drawable/common_textfield_disabled_grey" />
 
