US8732: Committing the partial resin of the review transfers table.

--- a/Discover-Bank-Phone/res/layout/load_more_header.xml
+++ b/Discover-Bank-Phone/res/layout/load_more_header.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.common"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
-    <LinearLayout
+    
+    <com.discover.mobile.common.ui.table.TableButtonGroup
         android:id="@+id/button_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
         android:layout_marginTop="@dimen/forms_inner_padding"
-        android:weightSum="1" 
-        android:orientation="horizontal">
-    </LinearLayout>
+        custom:resourceArry="@array/bank_review_transfers_buttons" />
 
     <com.discover.mobile.bank.ui.widgets.StatusMessageView
         android:id="@+id/status"
