--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -22,7 +22,7 @@
     <string name="recent_activity_amount">Amount</string>
     <string name="activity_online_checking">Online Checking:</string>
     <string name="activity_available_balance">Available Balance:</string>
-    <string name="activity_original_balance">Original Balance:</string>
+    <string name="activity_original_balance">Original Loan Balance:</string>
     <string name="activity_current_balance">Current Balance:</string>
     <string name="activity_apy">Current APY:</string>
     <string name="activity_interest_rate">Interest Rate:</string>
